# SciVisualiser

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  main.cpp
MainWindow/: CMakeLists.txt  CmakeLists.txt  MainWindowExport.h  svMainWindow.cpp  svMainWindow.h
MainWindow/resource/: svMainWindow.ui
QtExtensions/: CMakeLists.txt  CmakeLists.txt  QtExtensionsExport.h  svDialog.cpp  svDialog.h
QtExtensions/resource/: svDialog.ui
