SET(LIBRARY_OUTPUT_PATH  ${CMAKE_BINARY_DIR})

ADD_DEFINITIONS(-DMAINWINDOW_EXPORTS) 


SET(CMAKE_INCLUDE_CURRENT_DIR ON) 

INCLUDE_DIRECTORIES(
${PROJECT_SOURCE_DIR}/QtExtensions
)

FILE(GLOB HEAD_FILES "./*.h") 
FILE(GLOB SRC_FILES "./*.cpp")
FILE(GLOB UI_FILES "./resource/*.ui")

QT5_WRAP_CPP(MOC_FILES ${HEAD_FILES})
QT5_WRAP_UI(WRAP_FILES ${UI_FILES})

SOURCE_GROUP("Headers" ${HEAD_FILES})
SOURCE_GROUP("Sources" ${SRC_FILES})
SOURCE_GROUP("Ui" FILES ${UI_FILES})
SOURCE_GROUP("Generated" FILES  ${WRAP_FILES} ${MOC_FILES})


ADD_LIBRARY(MainWindow SHARED 
${HEAD_FILES} 
${SRC_FILES} 
${UI_FILES} 
${WRAP_FILES}
${MOC_FILES}
)

TARGET_LINK_LIBRARIES(MainWindow
${VTK_LIBRARIES}
QtExtensions
Qt5::Core Qt5::Gui Qt5::Widgets Qt5::OpenGL
)

