SET(LIBRARY_OUTPUT_PATH  ${CMAKE_BINARY_DIR})

SET(CMAKE_INCLUDE_CURRENT_DIR ON) 
ADD_DEFINITIONS(-DQTEXTENSIONS_EXPORTS)

FILE(GLOB HEAD_FILES "./*.h") 
FILE(GLOB SRC_FILES "./*.cpp")
FILE(GLOB UI_FILES "./resource/*.ui")

QT5_WRAP_CPP(MOC_FILES ${HEAD_FILES})
QT5_WRAP_UI(WRAP_FILES ${UI_FILES})

SOURCE_GROUP("Headers" ${HEAD_FILES})
SOURCE_GROUP("Sources" ${SRC_FILES})
SOURCE_GROUP("Ui" FILES ${UI_FILES})
SOURCE_GROUP("Generated" FILES  ${WRAP_FILES} ${MOC_FILES})
 

ADD_LIBRARY(QtExtensions SHARED 
${HEAD_FILES} 
${SRC_FILES} 
${UI_FILES} 
${WRAP_FILES}
${MOC_FILES}
)


TARGET_LINK_LIBRARIES(QtExtensions
${VTK_LIBRARIES}
Qt5::Core Qt5::Gui Qt5::Widgets Qt5::OpenGL
)